src/test/ui/macros/issue-19163.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/issue-19163.rs:9:5
   |
LL |     mywrite!(&v, "Hello world");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
   |
   = note: this error originates in the macro `mywrite` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
